// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Filter with single instance with multiple attributes renders correctly 1`] = `
<DocumentFragment>
  <div
    class="filter-container filter-custom-class"
    data-focusindex="0"
  >
    <div
      class="filter-selector"
    >
      <div
        class="filter-selector-content"
      >
        <button
          aria-activedescendant=""
          aria-controls="downshift-:r8:-menu"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-label="Equal"
          class="btn btn-default filter-selector-button button-icon equal"
          id="downshift-:r8:-toggle-button"
          role="combobox"
          tabindex="0"
        >
           
        </button>
        <ul
          aria-label="Select filter type"
          class="filter-selectors hidden"
          id="downshift-:r8:-menu"
          role="listbox"
          style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 0px);"
        />
      </div>
    </div>
    <input
      class="form-control filter-input"
      type="text"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`Text Filter with single instance with no context renders error message 1`] = `
<DocumentFragment>
  <div
    class="alert alert-danger"
  >
    The filter widget must be placed inside the column or header of the Data grid 2.0 or inside header of the Gallery widget.
  </div>
</DocumentFragment>
`;

exports[`Text Filter with single instance with single attribute renders correctly 1`] = `
<DocumentFragment>
  <div
    class="filter-container filter-custom-class"
    data-focusindex="0"
  >
    <div
      class="filter-selector"
    >
      <div
        class="filter-selector-content"
      >
        <button
          aria-activedescendant=""
          aria-controls="downshift-:r5:-menu"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-label="Equal"
          class="btn btn-default filter-selector-button button-icon equal"
          id="downshift-:r5:-toggle-button"
          role="combobox"
          tabindex="0"
        >
           
        </button>
        <ul
          aria-label="Select filter type"
          class="filter-selectors hidden"
          id="downshift-:r5:-menu"
          role="listbox"
          style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 0px);"
        />
      </div>
    </div>
    <input
      class="form-control filter-input"
      type="text"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`Text Filter with single instance with wrong attribute's type renders error message 1`] = `
<DocumentFragment>
  <div
    class="alert alert-danger"
  >
    Unable to get filter store. Check parent widget configuration.
  </div>
</DocumentFragment>
`;

exports[`Text Filter with single instance with wrong multiple attributes' types renders error message 1`] = `
<DocumentFragment>
  <div
    class="alert alert-danger"
  >
    Unable to get filter store. Check parent widget configuration.
  </div>
</DocumentFragment>
`;
